# kinescope

./: .env.example  .gitignore  DESIGN.md  Eidetic-Foundational-Doc.md  Makefile  PROGRESS.md  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: README.md
docs/adr/: 0001-record-architecture-decisions.md  0002-interception-and-storage.md
examples/: agent_script.py  fork_demo.py  fork_demo_tui.py  live_agent.py  live_gemini_agent.py  live_gemini_record.py  live_ollama_agent.py  live_ollama_record.py  live_record.py  openai_demo.py  otel_export.py  record_demo.py  share_bundle.py  stateful_agent.py  tool_agent.py
src/eidetic/: __init__.py  branch.py  cli.py  diff.py  engine.py  runner.py  session.py
src/eidetic/adapters/: __init__.py  anthropic.py  base.py  gemini.py
src/eidetic/export/: __init__.py  bundle.py  otel.py
src/eidetic/intercept/: __init__.py  http.py  stdlib.py  tools.py
src/eidetic/store/: base.py  local.py  mongo.py
src/eidetic/tui/: __init__.py  app.py
src/kinescope/: __init__.py  cli.py  diff.py  engine.py  model.py  runner.py  session.py
src/kinescope/adapters/: base.py  ollama.py  openai.py
src/kinescope/export/: otel.py
src/kinescope/intercept/: __init__.py  http.py  tools.py
src/kinescope/store/: __init__.py  base.py  local.py  mongo.py
src/kinescope/tui/: __init__.py  app.py
tests/: test_adapters.py  test_async.py  test_branch.py  test_bundle.py  test_divergence.py  test_gemini.py  test_mongo.py  test_openai.py  test_otel.py  test_real_run.py  test_record_replay.py  test_runner.py  test_snapshots.py  test_stdlib.py  test_store.py  test_streaming.py  test_stress.py  test_tools.py  test_tui.py
tests/fixtures/: gemini_generate.json  openai_chat.json
